Step 2: Test app factory pattern

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "app_minimal.py",
+      "src": "app_step2.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "15mb",
@@ -17,7 +17,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app_minimal.py"
+      "dest": "app_step2.py"
     }
   ],
   "env": {
